@@ -1,3 +1,7 @@
+2009-07-14  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* tests/spModel.matrix.R: new file
+
 2009-07-11  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/sparseMatrix.R (show, printSpMatrix2): both print() and show()
